WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94807
Flexbox doesn't need to compute logical height for stretched items in row flow
https://bugs.webkit.org/show_bug.cgi?id=94807
Summary
Flexbox doesn't need to compute logical height for stretched items in row flow
Shezan Baig
Reported
2012-08-23 06:53:30 PDT
Since we only stretch when child->style()->logicalHeight().isAuto(), there is no need to compute the logical height. We just need to constain by min-max values. See
bug 94604, comment 2
for details
Attachments
Patch
(6.03 KB, patch)
2012-08-23 08:46 PDT
,
Shezan Baig
no flags
Details
Formatted Diff
Diff
Patch
(6.12 KB, patch)
2012-08-23 11:48 PDT
,
Shezan Baig
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shezan Baig
Comment 1
2012-08-23 08:46:13 PDT
Created
attachment 160173
[details]
Patch Initial patch for review
Tony Chang
Comment 2
2012-08-23 10:28:58 PDT
Comment on
attachment 160173
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=160173&action=review
> Source/WebCore/rendering/RenderBox.cpp:443 > if (maxH == -1) > - maxH = result; > - result = min(maxH, result); > - result = max(minH, result); > - return result; > + maxH = logicalHeight; > + logicalHeight = min(maxH, logicalHeight);
Nit: This could just be: if (maxH != -1) logicalHeight = min(maxH, logicalHeight);
Shezan Baig
Comment 3
2012-08-23 11:48:55 PDT
Created
attachment 160205
[details]
Patch I simplified it further -- the entire maxH block can be skipped if style()->logicalMaxHeight().isUndefined()
WebKit Review Bot
Comment 4
2012-08-23 12:46:29 PDT
Comment on
attachment 160205
[details]
Patch Clearing flags on attachment: 160205 Committed
r126468
: <
http://trac.webkit.org/changeset/126468
>
WebKit Review Bot
Comment 5
2012-08-23 12:46:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug